--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -94,7 +94,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020JUL</th>\n",
        "      <th>2020AUG</th>\n",
        "      <th>2020SEP</th>\n",
        "      <th>2020OCT</th>\n",
@@ -104,6 +103,7 @@
        "      <th>2021FEB</th>\n",
        "      <th>2021MAR</th>\n",
        "      <th>2021APR</th>\n",
+       "      <th>2021MAY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -121,7 +121,6 @@
        "      <td>0.03</td>\n",
        "      <td>...</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -130,6 +129,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -144,16 +144,16 @@
        "      <td>4.90</td>\n",
        "      <td>3.80</td>\n",
        "      <td>...</td>\n",
-       "      <td>15.49</td>\n",
-       "      <td>17.02</td>\n",
-       "      <td>19.74</td>\n",
-       "      <td>22.05</td>\n",
-       "      <td>19.19</td>\n",
-       "      <td>22.89</td>\n",
-       "      <td>15.34</td>\n",
-       "      <td>18.40</td>\n",
-       "      <td>21.87</td>\n",
-       "      <td>13.27</td>\n",
+       "      <td>17.04</td>\n",
+       "      <td>19.83</td>\n",
+       "      <td>22.09</td>\n",
+       "      <td>19.18</td>\n",
+       "      <td>22.46</td>\n",
+       "      <td>15.02</td>\n",
+       "      <td>18.16</td>\n",
+       "      <td>21.55</td>\n",
+       "      <td>13.26</td>\n",
+       "      <td>22.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -168,7 +168,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.08</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.12</td>\n",
@@ -178,6 +177,7 @@
        "      <td>0.25</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.02</td>\n",
+       "      <td>0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -192,16 +192,16 @@
        "      <td>0.23</td>\n",
        "      <td>0.32</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.14</td>\n",
        "      <td>0.18</td>\n",
        "      <td>0.19</td>\n",
        "      <td>0.27</td>\n",
        "      <td>0.23</td>\n",
-       "      <td>0.29</td>\n",
+       "      <td>0.30</td>\n",
        "      <td>0.23</td>\n",
        "      <td>0.27</td>\n",
-       "      <td>0.30</td>\n",
+       "      <td>0.29</td>\n",
        "      <td>0.20</td>\n",
+       "      <td>0.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -229,7 +229,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 295 columns</p>\n",
+       "<p>5 rows × 296 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -240,28 +240,28 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  EX Exports     0.17   \n",
        "4  0 Food & live animals              AI Anguilla  EX Exports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020JUL  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020AUG  \\\n",
        "0     0.04     0.07     0.01     0.04     0.04     0.03  ...     0.00   \n",
-       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    15.49   \n",
-       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.08   \n",
-       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.14   \n",
+       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    17.04   \n",
+       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.03   \n",
+       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.18   \n",
        "4     0.00     0.01     0.03     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  \\\n",
-       "0     0.00     0.01     0.00     0.00     0.01     0.00     0.00     0.00   \n",
-       "1    17.02    19.74    22.05    19.19    22.89    15.34    18.40    21.87   \n",
-       "2     0.03     0.11     0.12     0.06     0.44     0.13     0.25     0.03   \n",
-       "3     0.18     0.19     0.27     0.23     0.29     0.23     0.27     0.30   \n",
+       "   2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  2021APR  \\\n",
+       "0     0.01     0.00     0.00     0.01     0.00     0.00     0.00     0.00   \n",
+       "1    19.83    22.09    19.18    22.46    15.02    18.16    21.55    13.26   \n",
+       "2     0.11     0.12     0.06     0.44     0.13     0.25     0.03     0.02   \n",
+       "3     0.19     0.27     0.23     0.30     0.23     0.27     0.29     0.20   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021APR  \n",
-       "0     0.00  \n",
-       "1    13.27  \n",
-       "2     0.02  \n",
-       "3     0.20  \n",
+       "   2021MAY  \n",
+       "0     0.01  \n",
+       "1    22.55  \n",
+       "2     0.08  \n",
+       "3     0.17  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 295 columns]"
+       "[5 rows x 296 columns]"
       ]
      },
      "execution_count": 5,
@@ -408,43 +408,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8650447</th>\n",
+       "      <th>8680072</th>\n",
        "      <td>Total</td>\n",
        "      <td>Sweden</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "      <td>3.220000e+08</td>\n",
+       "      <td>2021-05-01</td>\n",
+       "      <td>3.490000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8650448</th>\n",
+       "      <th>8680073</th>\n",
        "      <td>Total</td>\n",
        "      <td>Singapore</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "      <td>4.090000e+08</td>\n",
+       "      <td>2021-05-01</td>\n",
+       "      <td>3.000000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8650474</th>\n",
+       "      <th>8680099</th>\n",
        "      <td>Total</td>\n",
        "      <td>Turkey</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "      <td>4.310000e+08</td>\n",
+       "      <td>2021-05-01</td>\n",
+       "      <td>3.930000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8650482</th>\n",
+       "      <th>8680107</th>\n",
        "      <td>Total</td>\n",
        "      <td>United States</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "      <td>4.059000e+09</td>\n",
+       "      <td>2021-05-01</td>\n",
+       "      <td>4.024000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8650492</th>\n",
+       "      <th>8680117</th>\n",
        "      <td>Total</td>\n",
        "      <td>Whole world</td>\n",
-       "      <td>2021-04-01</td>\n",
-       "      <td>2.635600e+10</td>\n",
+       "      <td>2021-05-01</td>\n",
+       "      <td>2.777000e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>839500 rows × 4 columns</p>\n",
+       "<p>842375 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -455,13 +455,13 @@
        "19       0 Food & live animals               Belgium 1997-01-01  2.255000e+07\n",
        "36       0 Food & live animals                Canada 1997-01-01  8.180000e+06\n",
        "...                        ...                   ...        ...           ...\n",
-       "8650447                  Total                Sweden 2021-04-01  3.220000e+08\n",
-       "8650448                  Total             Singapore 2021-04-01  4.090000e+08\n",
-       "8650474                  Total                Turkey 2021-04-01  4.310000e+08\n",
-       "8650482                  Total         United States 2021-04-01  4.059000e+09\n",
-       "8650492                  Total           Whole world 2021-04-01  2.635600e+10\n",
+       "8680072                  Total                Sweden 2021-05-01  3.490000e+08\n",
+       "8680073                  Total             Singapore 2021-05-01  3.000000e+08\n",
+       "8680099                  Total                Turkey 2021-05-01  3.930000e+08\n",
+       "8680107                  Total         United States 2021-05-01  4.024000e+09\n",
+       "8680117                  Total           Whole world 2021-05-01  2.777000e+10\n",
        "\n",
-       "[839500 rows x 4 columns]"
+       "[842375 rows x 4 columns]"
       ]
      },
      "execution_count": 11,
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,16 +549,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>exports</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>COMMODITY</th>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Australia</th>\n",
+       "      <th>0 Food &amp; live animals</th>\n",
+       "      <th>1997-01-01</th>\n",
+       "      <td>4950000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00 Live animals</th>\n",
+       "      <th>1997-01-01</th>\n",
+       "      <td>1130000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>01 Meat &amp; meat preparations</th>\n",
+       "      <th>1997-01-01</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>02 Dairy products &amp; eggs</th>\n",
+       "      <th>1997-01-01</th>\n",
+       "      <td>140000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03 Fish &amp; shellfish</th>\n",
+       "      <th>1997-01-01</th>\n",
+       "      <td>360000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    exports\n",
+       "COUNTRY   COMMODITY                   time                 \n",
+       "Australia 0 Food & live animals       1997-01-01  4950000.0\n",
+       "          00 Live animals             1997-01-01  1130000.0\n",
+       "          01 Meat & meat preparations 1997-01-01        0.0\n",
+       "          02 Dairy products & eggs    1997-01-01   140000.0\n",
+       "          03 Fish & shellfish         1997-01-01   360000.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,9 +658,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>exports</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>COMMODITY</th>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>1.909000e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>2.359800e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>2.901900e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>2.519500e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-01</th>\n",
+       "      <td>2.617200e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                exports\n",
+       "COUNTRY     COMMODITY          time                    \n",
+       "Whole world Total (ex. metals) 2021-01-01  1.909000e+10\n",
+       "                               2021-02-01  2.359800e+10\n",
+       "                               2021-03-01  2.901900e+10\n",
+       "                               2021-04-01  2.519500e+10\n",
+       "                               2021-05-01  2.617200e+10"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "foo.tail()"
    ]
