--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -94,7 +94,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020SEP</th>\n",
        "      <th>2020OCT</th>\n",
        "      <th>2020NOV</th>\n",
        "      <th>2020DEC</th>\n",
@@ -104,6 +103,7 @@
        "      <th>2021APR</th>\n",
        "      <th>2021MAY</th>\n",
        "      <th>2021JUN</th>\n",
+       "      <th>2021JUL</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -120,7 +120,6 @@
        "      <td>0.04</td>\n",
        "      <td>0.03</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
@@ -130,6 +129,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -144,7 +144,6 @@
        "      <td>4.90</td>\n",
        "      <td>3.80</td>\n",
        "      <td>...</td>\n",
-       "      <td>19.83</td>\n",
        "      <td>22.09</td>\n",
        "      <td>19.18</td>\n",
        "      <td>22.46</td>\n",
@@ -154,6 +153,7 @@
        "      <td>13.20</td>\n",
        "      <td>22.65</td>\n",
        "      <td>16.82</td>\n",
+       "      <td>20.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -168,7 +168,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.11</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.06</td>\n",
        "      <td>0.44</td>\n",
@@ -178,6 +177,7 @@
        "      <td>0.02</td>\n",
        "      <td>0.08</td>\n",
        "      <td>0.13</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -192,7 +192,6 @@
        "      <td>0.23</td>\n",
        "      <td>0.32</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.19</td>\n",
        "      <td>0.27</td>\n",
        "      <td>0.23</td>\n",
        "      <td>0.30</td>\n",
@@ -202,6 +201,7 @@
        "      <td>0.21</td>\n",
        "      <td>0.17</td>\n",
        "      <td>0.17</td>\n",
+       "      <td>0.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -229,7 +229,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 297 columns</p>\n",
+       "<p>5 rows × 298 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -240,28 +240,28 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  EX Exports     0.17   \n",
        "4  0 Food & live animals              AI Anguilla  EX Exports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020SEP  \\\n",
-       "0     0.04     0.07     0.01     0.04     0.04     0.03  ...     0.01   \n",
-       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    19.83   \n",
-       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.11   \n",
-       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.19   \n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020OCT  \\\n",
+       "0     0.04     0.07     0.01     0.04     0.04     0.03  ...     0.00   \n",
+       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    22.09   \n",
+       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.12   \n",
+       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.27   \n",
        "4     0.00     0.01     0.03     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  2021APR  2021MAY  \\\n",
-       "0     0.00     0.00     0.01     0.00     0.00     0.00     0.00     0.01   \n",
-       "1    22.09    19.18    22.46    15.02    18.16    21.55    13.20    22.65   \n",
-       "2     0.12     0.06     0.44     0.13     0.25     0.03     0.02     0.08   \n",
-       "3     0.27     0.23     0.30     0.23     0.27     0.29     0.21     0.17   \n",
+       "   2020NOV  2020DEC  2021JAN  2021FEB  2021MAR  2021APR  2021MAY  2021JUN  \\\n",
+       "0     0.00     0.01     0.00     0.00     0.00     0.00     0.01     0.00   \n",
+       "1    19.18    22.46    15.02    18.16    21.55    13.20    22.65    16.82   \n",
+       "2     0.06     0.44     0.13     0.25     0.03     0.02     0.08     0.13   \n",
+       "3     0.23     0.30     0.23     0.27     0.29     0.21     0.17     0.17   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021JUN  \n",
-       "0     0.00  \n",
-       "1    16.82  \n",
-       "2     0.13  \n",
-       "3     0.17  \n",
+       "   2021JUL  \n",
+       "0     0.01  \n",
+       "1    20.73  \n",
+       "2     0.00  \n",
+       "3     0.23  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 297 columns]"
+       "[5 rows x 298 columns]"
       ]
      },
      "execution_count": 5,
@@ -408,43 +408,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8709697</th>\n",
+       "      <th>8739322</th>\n",
        "      <td>Total</td>\n",
        "      <td>Sweden</td>\n",
-       "      <td>2021-06-01</td>\n",
-       "      <td>3.210000e+08</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>3.050000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8709698</th>\n",
+       "      <th>8739323</th>\n",
        "      <td>Total</td>\n",
        "      <td>Singapore</td>\n",
-       "      <td>2021-06-01</td>\n",
-       "      <td>3.990000e+08</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>4.190000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8709724</th>\n",
+       "      <th>8739349</th>\n",
        "      <td>Total</td>\n",
        "      <td>Turkey</td>\n",
-       "      <td>2021-06-01</td>\n",
-       "      <td>4.080000e+08</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>4.030000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8709732</th>\n",
+       "      <th>8739357</th>\n",
        "      <td>Total</td>\n",
        "      <td>United States</td>\n",
-       "      <td>2021-06-01</td>\n",
-       "      <td>3.764000e+09</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>4.114000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8709742</th>\n",
+       "      <th>8739367</th>\n",
        "      <td>Total</td>\n",
        "      <td>Whole world</td>\n",
-       "      <td>2021-06-01</td>\n",
-       "      <td>2.731300e+10</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>2.668800e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>845250 rows × 4 columns</p>\n",
+       "<p>848125 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -455,13 +455,13 @@
        "19       0 Food & live animals               Belgium 1997-01-01  2.255000e+07\n",
        "36       0 Food & live animals                Canada 1997-01-01  8.180000e+06\n",
        "...                        ...                   ...        ...           ...\n",
-       "8709697                  Total                Sweden 2021-06-01  3.210000e+08\n",
-       "8709698                  Total             Singapore 2021-06-01  3.990000e+08\n",
-       "8709724                  Total                Turkey 2021-06-01  4.080000e+08\n",
-       "8709732                  Total         United States 2021-06-01  3.764000e+09\n",
-       "8709742                  Total           Whole world 2021-06-01  2.731300e+10\n",
+       "8739322                  Total                Sweden 2021-07-01  3.050000e+08\n",
+       "8739323                  Total             Singapore 2021-07-01  4.190000e+08\n",
+       "8739349                  Total                Turkey 2021-07-01  4.030000e+08\n",
+       "8739357                  Total         United States 2021-07-01  4.114000e+09\n",
+       "8739367                  Total           Whole world 2021-07-01  2.668800e+10\n",
        "\n",
-       "[845250 rows x 4 columns]"
+       "[848125 rows x 4 columns]"
       ]
      },
      "execution_count": 11,
@@ -697,10 +697,6 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
-       "      <th>2021-02-01</th>\n",
-       "      <td>2.359800e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2021-03-01</th>\n",
        "      <td>2.901900e+10</td>\n",
        "    </tr>\n",
@@ -716,6 +712,10 @@
        "      <th>2021-06-01</th>\n",
        "      <td>2.718800e+10</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-01</th>\n",
+       "      <td>2.657500e+10</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -723,11 +723,11 @@
       "text/plain": [
        "                                                exports\n",
        "COUNTRY     COMMODITY          time                    \n",
-       "Whole world Total (ex. metals) 2021-02-01  2.359800e+10\n",
-       "                               2021-03-01  2.901900e+10\n",
+       "Whole world Total (ex. metals) 2021-03-01  2.901900e+10\n",
        "                               2021-04-01  2.521900e+10\n",
        "                               2021-05-01  2.634300e+10\n",
-       "                               2021-06-01  2.718800e+10"
+       "                               2021-06-01  2.718800e+10\n",
+       "                               2021-07-01  2.657500e+10"
       ]
      },
      "execution_count": 20,
